@@ -1,9 +1,11 @@
 #ifndef options_h
 #define options_h
+namespace setup{
 void options();	// Ask user to open data file or enter dimensions
 void default_field(); // Set up field with preset dimensions
 
 void options();		// Ask user to open data file or enter dimensions
 void default_field(); 	// Set up field with preset dimensions
 void input_field();	// Open a text field containing field information
+}
 #endif
